================================

[TO BE COMPLETED: CHECK GIT HISTORY SINCE 17/02]
 
Support for option groups for columns with enumerated values: ...
Pagination: ...
Filtering on the model:...

Extensions (need jQuery UI):
- date pickers: ...
- autocomplete editor (official jQuery UI autocomplete) : ...

Charts:
- if renderPieChart is called with valueColumnIndex = labelColumnIndex, we display a chart showing the frequency of values occuring in this column
- added an optional "limit" parameter to renderBarChart, renderStackedBarChart and renderPieChart: if set to non null and > 0, this is the maximum number of rows taken into account for drawing the chart
- all optional parameters in renderBarChart, renderStackedBarChart and renderPieChart can be given "null" to use the default value
- demo: displays two charts below the table: age per person (bar chart) and country distribution (frequency pie chart)

Callback:
- tableRendered is called also when the table is refreshed (after sorting, filtering or changing the current page)
- sort() is called by renderGrid only if there is a currently defined sorting order (to avoid a double render) but the expected callback tableSorted is still called
- demo: updatePaginator needs only to be called in tableRendered and when deleting a row 

Misc:
- fix in filter() when called whithout argument: must refilter using current filter
- preserve HTML row ids

INCOMPATIBILITIES:

Version 2.0 comes with some compatibility breaks, but updating your code should be very easy: 
- attach mode: original HTML row ids are now preserved
- removeRow now takes a row index, for consistency with the rest of the API.
  To get the row index from the row id you can use getRowIndex(rowId).

DEPRECATED:

- addRow has been renamed as appendRow for more clarity (as insertRow is now also available)
  addRow si still there but deprecated
- attachToHTMLTable: second parameter deprecated: ...   