@@ -248,11 +248,14 @@ INCOMPATIBILITIES:
 
 Version 2.0 comes with some compatibility breaks, but updating your code should be very easy: 
 - attach mode: original HTML row ids are now preserved
-- removeRow now takes a row index, for consistency with the rest of the API.
-  To get the row index from the row id you can use getRowIndex(rowId).
 
 DEPRECATED:
 
 - addRow has been renamed as appendRow for more clarity (as insertRow is now also available)
   addRow si still there but deprecated
+
+- removeRow(rowId) is deprecated: use remove(rowIndex) instead
+  remove takes a row index, for consistency with the rest of the API.
+  To get the row index from the row id you can use getRowIndex(rowId).
+  
 - attachToHTMLTable: second parameter deprecated: ...   
